--- a/Snake2QT/CMakeLists.txt
+++ b/Snake2QT/CMakeLists.txt
@@ -10,7 +10,7 @@ set(QT_VERSION 6)
 set(REQUIRED_LIBS Core Gui Widgets)
 set(REQUIRED_LIBS_QUALIFIED Qt6::Core Qt6::Gui Qt6::Widgets)
 
-add_executable(${PROJECT_NAME} main.cpp Board.cpp Board.h Snake.cpp Snake.h)
+add_executable(${PROJECT_NAME} main.cpp Board.cpp Board.h Snake.cpp Snake.h StartWindow.cpp StartWindow.h st_window.cpp st_window.h st_window.ui)
 target_link_libraries(${PROJECT_NAME} "winmm.lib" )
 if (NOT CMAKE_PREFIX_PATH)
     message(WARNING "CMAKE_PREFIX_PATH is not defined, you may need to set it "
